<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/md_theme_onPrimary"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:name="com.example.m7_geeco_in.fragments.RetornTop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        tools:layout="@layout/fragment_retorn_top" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/logoApp"
            android:name="com.example.m7_geeco_in.fragments.Logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_logo" />

    </LinearLayout>

    <TextView
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/CCboto"
        android:textColor="@color/md_theme_primary"
        android:textSize="20sp"
        android:textStyle="italic|bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/md_theme_tertiaryFixedDim"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoNom"
            android:fontFamily="@font/roboto"
            android:textColor="#333"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/infoHint"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" /><TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infoAdreca"
        android:fontFamily="@font/roboto"
        android:textColor="#333"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/infoHint"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/infoContrassenya"
            android:textColor="#333"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/infoHint"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoRContrassenya"
            android:textColor="#333"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/infoHint"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/md_theme_primary"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/CCboto"
        android:textColor="#FFFFFF" />

</LinearLayout>
